2007-01-26  Steve M. Robbins  <smr@sumost.ca>

	* config/ax_cxx_have_isfinite.m4: New.  Autoconf macro that tests
	for finite() in C++ mode.
	* configure.in: Check for isfinite() and finite().

	* examples/cppunittest/TestAssertTest.cpp (testAssertDoubleEquals): 
	* src/cppunit/TestAssert.cpp (assertDoubleEquals): Account for
	non-finite values.

2007-01-11  Steve M. Robbins  <smr@sumost.ca>

	* examples/cppunittest/MockFunctor.h:
	* examples/cppunittest/MockProtector.h:
	* examples/cppunittest/XmlOutputterTest.cpp:
	* examples/cppunittest/XmlUniformiser.cpp:
	* src/DllPlugInTester/CommandLineParser.cpp:
	* src/cppunit/DynamicLibraryManagerException.cpp:
	* src/cppunit/TestCaseDecorator.cpp:
	* src/cppunit/TextTestRunner.cpp:
	* src/cppunit/XmlDocument.cpp: Arrange field initializers in
	correct order.

	* include/cppunit/plugin/TestPlugIn.h (struct CppUnitTestPlugIn): 
	* include/cppunit/extensions/TestFixtureFactory.h (class TestFixtureFactory): 
	* include/cppunit/XmlOutputterHook.h (XmlOutputterHook): Add
	virtual destructor to virtual class.

	* examples/cppunittest/TestAssertTest.cpp: Put a C++ statement in
	the first argument of CPPUNIT_ASSERT_THROW() and
	CPPUNIT_ASSERT_NO_THROW().

	* examples/hierarchy/main.cpp (main): Return value now reflects
	whether tests passed.
	* examples/hierarchy/Makefile.am (XFAIL_TESTS): New.  Mark hierachy
	test program as an expected failure.

	* Makefile.am (dist-hook): Don't fail if $(distdir)/lib already
	exists.

	* config/bb_enable_doxygen.m4 (BB_ENABLE_DOXYGEN): Add quotes
	around function name, BB_ENABLE_DOXYGEN.

2006-10-26 Baptiste Lepilleur <blep@users.sourceforge.net>
   * include/cppunit/TestResult.h:
   * include/cppunit/ui/Config.h: fixed compilation issues with QtTestRunner.

2006-06-29 Baptiste Lepilleur <blep@users.sourceforge.net>
   * Makefile.am:
   * lib/.keepme: added dummy file to prevent lib/ removal by some
     unzip clients. Fixed bug #1527877 .

   * src/msvc6/TesRunner/TestRunner.rc: